--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -9,3 +9,6 @@
       <p>To learn more about HTML</p>
       <a href="http://www.w3schools.com/html/">Visit HTML tutorial</a>
   </div>
+  <h1>My first HTML page</h1>
+   <img src="http://www.ubelly.com/wp-content/uploads/2013/04/railsgirls.png" />
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere eu justo vel vehicula. Proin bibendum molestie nulla non porta. Aenean molestie cursus luctus. Fusce ex nunc, rutrum eget dolor a, tempor tempor sapien. Aenean rutrum </p>
