--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,14 +1,18 @@
-<h1>Pages#info</h1>
+<h1 style="background-color:yellow">Moj prvi sajt</h1>
 <p>Find me in app/views/pages/info.html.erb</p>
-<h1>My First Rails Girls</h1>
+<h1 style="background-color:yellow">My First Rails Girls</h1>
   <div>
-    <h2>Hypatia</h2>
+    <h2 style="background-color:yellow">Hypatia</h2>
       <p>"Reserve your right to think, for even to think wrongly is better than not to think at all."</p>
       <p>"Life is an unfoldment, and the further we travel the more truth we can comprehend. To understand the things that are at our door is the best preparation for understanding those that lie beyond."</p>
     <h2>HTML</h2>
       <p>To learn more about HTML</p>
       <a href="http://www.w3schools.com/html/">Visit HTML tutorial</a>
   </div>
-  <h1>My first HTML page</h1>
+  <h1 style="background-color:yellow">My first HTML page</h1>
    <img src="http://www.ubelly.com/wp-content/uploads/2013/04/railsgirls.png" />
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere eu justo vel vehicula. Proin bibendum molestie nulla non porta. Aenean molestie cursus luctus. Fusce ex nunc, rutrum eget dolor a, tempor tempor sapien. Aenean rutrum </p>
+   <h2 style="background-color:yellow">
+   Caos
+   </h2>
+   <a href="http://www.railsgirls.com">Posetite i ovu stranicu</a>
